[project]
name = "zhaw-artificial-intelligence-01"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.10.6",
    "numpy==2.3.2",
    "seaborn==0.13.2",
    "tabulate==0.9.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.1",
    "torchvision>=0.23.0",
    "tqdm==4.67.1",
]
